--- a/index.html
+++ b/index.html
@@ -5,196 +5,175 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
 <title>User - Tebak Kartu Natal</title>
 <style>
+/* Font & body */
 body{
   margin:0;
   font-family:'Poppins',sans-serif;
-  background:#08121c url('https://i.ibb.co/6YpYQZT/snow-bg.png') repeat;
+  background: linear-gradient(to bottom,#08121c,#0b1a2b);
   color:#fff;
   display:flex;
   justify-content:center;
   align-items:center;
   min-height:100vh;
   padding:20px;
-  overflow-x:hidden;
+  overflow:hidden;
   position:relative;
 }
 
-/* Salju animasi */
-@keyframes snow{
-  0%{transform: translateY(0);}
-  100%{transform: translateY(100vh);}
-}
+/* Snowflakes */
 .snowflake{
   position:absolute;
   top:-10px;
-  font-size:1em;
   color:#fff;
-  animation: snow linear infinite;
+  font-size:1em;
+  user-select:none;
   pointer-events:none;
+  animation: snow linear infinite;
+}
+@keyframes snow{
+  0%{transform: translateY(-10px);}
+  100%{transform: translateY(110vh);}
 }
 
+/* Wrapper utama */
 .wrap{
   width:100%;
   max-width:920px;
-  background:linear-gradient(145deg,#111 0%,#1c1c2b 100%);
+  background:#111;
   padding:20px;
-  border-radius:20px;
-  border:2px solid #d4af37;
-  box-shadow:0 0 30px rgba(212,175,55,0.5);
+  border-radius:12px;
+  border:1px solid rgba(212,175,55,0.1);
+  box-shadow:0 0 30px rgba(0,0,0,0.5);
 }
 
+/* Judul */
 h1{
   color:#d4af37;
-  margin-bottom:15px;
+  margin-bottom:10px;
   text-align:center;
-  text-shadow: 0 0 10px #d4af37;
 }
 
+/* Row input kode */
 .code-row{
   display:flex;
   gap:10px;
   align-items:center;
-  justify-content:center;
-  margin-bottom:20px;
+  margin-bottom:18px;
+  flex-wrap:wrap;
 }
-
 input{
-  padding:12px;
-  border-radius:12px;
+  padding:10px;
+  border-radius:8px;
   border:none;
   background:#0b0f10;
   color:#fff;
-  width:200px;
-  text-align:center;
-  font-weight:600;
+  flex:1;
 }
-
 .btn{
   background:#d4af37;
   color:#111;
-  padding:12px 20px;
-  border-radius:12px;
+  padding:10px 12px;
+  border-radius:8px;
   border:none;
   cursor:pointer;
   font-weight:600;
-  transition:0.3s;
-}
-.btn:hover{
-  transform: scale(1.05);
-  box-shadow:0 0 20px #d4af37;
 }
 
-.grid{
-  display:grid;
-  grid-template-columns:repeat(3,1fr);
-  gap:16px;
-}
-
-.card{
-  height:160px;
-  border-radius:15px;
-  background:#0b0b0b;
-  border:2px solid #d4af37;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  cursor:pointer;
-  position:relative;
-  transition: transform .6s;
-  transform-style: preserve-3d;
-  box-shadow:0 0 15px rgba(212,175,55,0.2);
-}
-
-.card.flip{
-  transform: rotateY(180deg);
-}
-
-.card.locked{
-  filter:grayscale(.2) blur(.5px);
-  cursor:not-allowed;
-}
-
-.card .front, .card .back{
-  position:absolute;
-  width:100%;
-  height:100%;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  border-radius:15px;
-  backface-visibility:hidden;
-  font-size:18px;
-  font-weight:700;
-}
-
-.card .front{
-  background:#0b0b0b;
-  color:#fff;
-}
-
-.card .back{
-  background:linear-gradient(135deg,#d61c1c,#1cd670);
-  color:#fff;
-  transform:rotateY(180deg);
-  display:flex;
-  flex-direction:column;
-}
-
-.badge{
-  position:absolute;
-  top:10px;
-  right:10px;
-  background:rgba(0,0,0,0.4);
-  color:#fff;
-  padding:4px 6px;
-  border-radius:6px;
-  font-weight:700;
-}
-
-.result-area{
-  margin-top:20px;
-  max-height:200px;
-  overflow-y:auto;
-  font-size:14px;
-}
-
-.small{
-  font-size:13px;
-  color:#bfc6c9;
-}
-
+/* Daftar hadiah */
 .prize-list{
   display:flex;
   flex-wrap:wrap;
-  gap:12px;
-  margin-top:20px;
+  gap:8px;
+  margin-top:12px;
   justify-content:center;
 }
-
 .prize-item{
-  flex:1 1 28%;
-  background:linear-gradient(135deg,#d61c1c,#1cd670);
+  flex:1 1 30%;
+  background:#0b0b0b;
   padding:12px;
-  border-radius:12px;
+  border-radius:8px;
+  border:1px solid rgba(212,175,55,0.05);
   text-align:center;
-  font-size:16px;
+  font-size:14px;
   font-weight:600;
-  color:#fff;
-  box-shadow:0 0 15px rgba(212,175,55,0.4);
-  transition:0.3s;
+  color:#d4af37;
 }
-.prize-item:hover{
-  transform: scale(1.05);
+
+/* Grid kartu */
+.grid{
+  display:grid;
+  grid-template-columns:repeat(3,1fr);
+  gap:14px;
+  margin-top:20px;
 }
+
+/* Kartu */
+.card{
+  height:140px;
+  border-radius:10px;
+  perspective:1000px;
+  cursor:pointer;
+  position:relative;
+}
+.card.locked{filter:grayscale(.2) blur(.2px);cursor:not-allowed;}
+.card-inner{
+  position:relative;
+  width:100%;
+  height:100%;
+  transition: transform .6s;
+  transform-style: preserve-3d;
+  border-radius:10px;
+}
+.card.flip .card-inner{
+  transform: rotateY(180deg);
+}
+.card-front, .card-back{
+  position:absolute;
+  width:100%;
+  height:100%;
+  backface-visibility:hidden;
+  border-radius:10px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-weight:600;
+}
+.card-front{
+  background:#0b0b0b;
+  border:1px solid rgba(212,175,55,0.05);
+  color:#bfc6c9;
+}
+.card-back{
+  background:rgba(212,175,55,0.1);
+  transform: rotateY(180deg);
+  color:#111;
+}
+.badge{
+  position:absolute;
+  top:6px;
+  right:6px;
+  background:rgba(0,0,0,0.4);
+  color:#d4af37;
+  padding:3px 6px;
+  border-radius:6px;
+  font-weight:700;
+  font-size:12px;
+}
+
+/* Hasil kartu */
+.result-area{
+  margin-top:16px;
+}
+.small{font-size:13px;color:#bfc6c9;text-align:center;}
 </style>
 </head>
 <body>
 <div class="wrap">
-<h1>Tebak Kartu Natal 🎄</h1>
+<h1>Tebak Kartu Natal</h1>
 <div class="code-row">
-<input id="codeInput" placeholder="Masukkan kode..."/>
-<button id="verifyBtn" class="btn">Verify</button>
-<div class="small" id="status">Status: belum terkoneksi</div>
+  <input id="codeInput" placeholder="Masukkan kode..."/>
+  <button id="verifyBtn" class="btn">Verify</button>
+  <div class="small" id="status">Status: belum terkoneksi</div>
 </div>
 
 <div class="prize-list">
@@ -211,6 +190,7 @@ input{
 import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
 import { getDatabase, ref, get, set, onValue } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
 
+// Firebase config
 const firebaseConfig = {
   apiKey: "AIzaSyDlpuf_uIlpmr2ybAqpJ2GTTRW-t86PGf0",
   authDomain: "hadiahnatal-a033b.firebaseapp.com",
@@ -239,30 +219,37 @@ let revealed=new Set();
 let maxSelect=3;
 let selectedCount=0;
 
+// Build grid kartu
 function buildGrid(){
   gridWrap.innerHTML='';
   for(let i=0;i<9;i++){
     const c=document.createElement('div');
     c.className='card locked';
     c.dataset.index=i;
-    c.innerHTML=`<div class="front">Kartu ${i+1}</div><div class="back"><span class="label">?</span></div>`;
+    c.innerHTML=`<div class="card-inner">
+      <div class="card-front">Kartu ${i+1}</div>
+      <div class="card-back"><span class="label">?</span></div>
+    </div>`;
     c.addEventListener('click',onCardClick);
     gridWrap.appendChild(c);
   }
 }
 
+// Set status
 function setStatus(txt){status.textContent='Status: '+txt;}
 
+// Ambil config dari Firebase
 function fetchConfig(){
   onValue(dbRef,(snap)=>{
     if(snap.exists()){
       serverConfig = snap.val();
-      setStatus('Siap - data tersedia 🎁');
+      setStatus('Siap - data tersedia');
       if(!unlocked) buildGrid();
     }else setStatus('Belum ada konfigurasi');
   });
 }
 
+// Klik kartu
 async function onCardClick(e){
   if(selectedCount>=maxSelect) return;
   const el = e.currentTarget;
@@ -271,6 +258,7 @@ async function onCardClick(e){
 
   const cards = serverConfig?.cards||[];
   const value = cards[idx]||'Kosong';
+
   el.classList.add('flip');
   el.querySelector('.label').textContent = value;
   revealed.add(idx);
@@ -286,31 +274,46 @@ async function onCardClick(e){
   }
 }
 
+// Simpan kode & kartu digunakan
 async function saveUsedCode(){
   const code = codeInput.value.trim();
   if(!code || !serverConfig) return;
   const snap = await get(ref(db, "gameConfig/usedCodes/"+code));
-  if(snap.exists()){ setStatus("Kode sudah dipakai ❌"); return; }
+  if(snap.exists()){ setStatus("Kode sudah dipakai"); return; }
+
   const cardsArr = Array.from(gridWrap.querySelectorAll('.card')).map(c=>c.classList.contains('flip')?c.querySelector('.label').textContent:null);
   await set(ref(db,"gameConfig/usedCodes/"+code), {cards:cardsArr, time:Date.now()});
-  setStatus("Kode & kartu tersimpan 🎄");
+  setStatus("Kode & kartu tersimpan ✓");
 }
 
+// Verifikasi kode
 verifyBtn.addEventListener('click',()=>{
   const code = codeInput.value.trim();
   if(!serverConfig){setStatus('Tidak ada konfigurasi'); return;}
   if(code===serverConfig.code){
-    unlocked=true; 
-    setStatus('Kode benar — pilih kartu! 🎁'); 
+    unlocked=true;
+    setStatus('Kode benar — pilih kartu!');
     document.querySelectorAll('.card').forEach(c=>c.classList.remove('locked'));
-  } else{
-    unlocked=false; 
-    setStatus('Kode salah ❌');
+  }else{
+    unlocked=false;
+    setStatus('Kode salah');
   }
 });
 
+// Build grid dan fetch config
 buildGrid();
 fetchConfig();
+
+// Snowflake generator
+for(let i=0;i<50;i++){
+  const snow = document.createElement('div');
+  snow.className='snowflake';
+  snow.style.left=Math.random()*100+'vw';
+  snow.style.fontSize=(Math.random()*10+10)+'px';
+  snow.style.animationDuration=(Math.random()*10+5)+'s';
+  snow.textContent='❄';
+  document.body.appendChild(snow);
+}
 </script>
 </body>
 </html>
