--- a/index.html
+++ b/index.html
@@ -5,24 +5,101 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
 <title>User - Tebak Kartu Natal</title>
 <style>
-body{margin:0;font-family:'Poppins',sans-serif;background:linear-gradient(to bottom,#08121c,#0b1a2b);color:#fff;display:flex;justify-content:center;align-items:center;min-height:100vh;padding:20px;overflow:hidden;}
-.snowflake{position:absolute;top:-10px;color:#fff;font-size:1em;user-select:none;pointer-events:none;animation:snow linear infinite;}
-@keyframes snow{0%{transform:translateY(-10px);}100%{transform:translateY(110vh);}}
-.wrap{width:100%;max-width:920px;background:#111;padding:20px;border-radius:12px;border:1px solid rgba(212,175,55,0.1);box-shadow:0 0 30px rgba(0,0,0,0.5);}
-h1{color:#d4af37;margin-bottom:10px;text-align:center;}
-.code-row{display:flex;gap:10px;align-items:center;margin-bottom:18px;flex-wrap:wrap;}
-input{padding:10px;border-radius:8px;border:none;background:#0b0f10;color:#fff;flex:1;}
-.btn{background:#d4af37;color:#111;padding:10px 12px;border-radius:8px;border:none;cursor:pointer;font-weight:600;}
-.prize-list{display:flex;flex-wrap:wrap;gap:8px;margin-top:12px;justify-content:center;}
-.prize-item{flex:1 1 30%;background:#0b0b0b;padding:12px;border-radius:8px;border:1px solid rgba(212,175,55,0.05);text-align:center;font-size:14px;font-weight:600;color:#d4af37;}
-.grid{display:grid;grid-template-columns:repeat(3,1fr);gap:14px;margin-top:20px;}
+body{
+  margin:0;
+  font-family:'Poppins',sans-serif;
+  background:linear-gradient(to bottom,#08121c,#0b1a2b);
+  color:#fff;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  min-height:100vh;
+  padding:20px;
+  overflow:hidden;
+}
+.wrap{
+  width:100%;
+  max-width:920px;
+  background:#111;
+  padding:20px;
+  border-radius:12px;
+  border:1px solid rgba(212,175,55,0.1);
+  box-shadow:0 0 30px rgba(0,0,0,0.5);
+}
+h1{
+  color:#d4af37;
+  margin-bottom:10px;
+  text-align:center;
+}
+.code-row{
+  display:flex;
+  gap:10px;
+  align-items:center;
+  margin-bottom:18px;
+  flex-wrap:wrap;
+}
+input{
+  padding:10px;
+  border-radius:8px;
+  border:none;
+  background:#0b0f10;
+  color:#fff;
+  flex:1;
+}
+.btn{
+  background:#d4af37;
+  color:#111;
+  padding:10px 12px;
+  border-radius:8px;
+  border:none;
+  cursor:pointer;
+  font-weight:600;
+}
+.prize-list{
+  display:flex;
+  flex-wrap:wrap;
+  gap:12px;
+  margin-top:12px;
+  justify-content:center;
+}
+.prize-item{
+  flex:1 1 30%;
+  background:linear-gradient(135deg,#ff4d4d,#d4af37,#4caf50);
+  padding:16px;
+  border-radius:12px;
+  border:2px solid #fff;
+  text-align:center;
+  font-size:16px;
+  font-weight:700;
+  color:#fff;
+  position:relative;
+  box-shadow:0 0 12px rgba(255,255,255,0.3);
+  transition:transform .3s, box-shadow .3s;
+}
+.prize-item:hover{
+  transform:scale(1.05);
+  box-shadow:0 0 20px rgba(255,255,255,0.6);
+}
+.prize-item::before{
+  content:"🎄";
+  position:absolute;
+  top:-8px;
+  left:10px;
+  font-size:18px;
+}
+.grid{
+  display:grid;
+  grid-template-columns:repeat(3,1fr);
+  gap:14px;
+  margin-top:20px;
+}
 .card{height:140px;border-radius:10px;perspective:1000px;cursor:pointer;position:relative;}
 .card.locked{filter:grayscale(.2) blur(.2px);cursor:not-allowed;}
 .card-inner{position:relative;width:100%;height:100%;transition:transform .6s;transform-style:preserve-3d;border-radius:10px;}
 .card.flip .card-inner{transform:rotateY(180deg);}
 .card-front,.card-back{position:absolute;width:100%;height:100%;backface-visibility:hidden;border-radius:10px;display:flex;align-items:center;justify-content:center;font-weight:600;}
 .card-front{background:#0b0b0b;border:1px solid rgba(212,175,55,0.05);color:#bfc6c9;}
-.card-back{background:rgba(212,175,55,0.1);transform:rotateY(180deg);color:#111;}
+.card-back{background:rgba(212,175,55,0.15);transform:rotateY(180deg);color:#111;}
 .badge{position:absolute;top:6px;right:6px;background:rgba(0,0,0,0.4);color:#d4af37;padding:3px 6px;border-radius:6px;font-weight:700;font-size:12px;}
 .result-area{margin-top:16px;}
 .small{font-size:13px;color:#bfc6c9;text-align:center;}
@@ -171,17 +248,6 @@ verifyBtn.addEventListener('click',()=>{
 
 buildGrid();
 fetchConfig();
-
-// Snowflake Natal
-for(let i=0;i<50;i++){
-  const snow = document.createElement('div');
-  snow.className='snowflake';
-  snow.style.left=Math.random()*100+'vw';
-  snow.style.fontSize=(Math.random()*10+10)+'px';
-  snow.style.animationDuration=(Math.random()*10+5)+'s';
-  snow.textContent='❄';
-  document.body.appendChild(snow);
-}
 </script>
 </body>
 </html>
