--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-<title>User - Tebak Kartu Natal</title>
+<title>User - Tebak Kartu Natal Animasi</title>
 <style>
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+
 body{
   margin:0;
   font-family:'Poppins',sans-serif;
-  background:linear-gradient(to bottom,#08121c,#0b1a2b);
+  background:#08121c;
   color:#fff;
   display:flex;
   justify-content:center;
@@ -16,7 +18,41 @@ body{
   min-height:100vh;
   padding:20px;
   overflow:hidden;
+  position:relative;
 }
+
+/* Background pohon Natal & salju */
+.tree, .snowflake{
+  position:absolute;
+  pointer-events:none;
+  z-index:0;
+}
+.tree{
+  width:30px;
+  height:40px;
+  background:linear-gradient(to top, #0a7b1f 60%, #00ff00 100%);
+  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+  opacity:0.7;
+  animation:treeFall linear infinite;
+}
+@keyframes treeFall{
+  0%{transform:translateY(-50px) scale(0.5); opacity:0.6;}
+  100%{transform:translateY(110vh) scale(1); opacity:0;}
+}
+.snowflake{
+  width:6px;
+  height:6px;
+  background:#fff;
+  border-radius:50%;
+  opacity:0.8;
+  animation:snowFall linear infinite;
+}
+@keyframes snowFall{
+  0%{transform:translateY(-10px);}
+  100%{transform:translateY(110vh);}
+}
+
+/* Wrapper utama */
 .wrap{
   width:100%;
   max-width:920px;
@@ -25,12 +61,18 @@ body{
   border-radius:12px;
   border:1px solid rgba(212,175,55,0.1);
   box-shadow:0 0 30px rgba(0,0,0,0.5);
+  position:relative;
+  z-index:1;
 }
+
+/* Judul */
 h1{
   color:#d4af37;
   margin-bottom:10px;
   text-align:center;
 }
+
+/* Input kode */
 .code-row{
   display:flex;
   gap:10px;
@@ -55,6 +97,8 @@ input{
   cursor:pointer;
   font-weight:600;
 }
+
+/* Kotak hadiah */
 .prize-list{
   display:flex;
   flex-wrap:wrap;
@@ -87,22 +131,61 @@ input{
   left:10px;
   font-size:18px;
 }
+
+/* Grid kartu */
 .grid{
   display:grid;
   grid-template-columns:repeat(3,1fr);
   gap:14px;
   margin-top:20px;
 }
-.card{height:140px;border-radius:10px;perspective:1000px;cursor:pointer;position:relative;}
+.card{
+  height:140px;
+  border-radius:10px;
+  perspective:1000px;
+  cursor:pointer;
+  position:relative;
+}
 .card.locked{filter:grayscale(.2) blur(.2px);cursor:not-allowed;}
-.card-inner{position:relative;width:100%;height:100%;transition:transform .6s;transform-style:preserve-3d;border-radius:10px;}
+.card-inner{
+  position:relative;
+  width:100%;
+  height:100%;
+  transition:transform .6s;
+  transform-style:preserve-3d;
+  border-radius:10px;
+}
 .card.flip .card-inner{transform:rotateY(180deg);}
-.card-front,.card-back{position:absolute;width:100%;height:100%;backface-visibility:hidden;border-radius:10px;display:flex;align-items:center;justify-content:center;font-weight:600;}
+.card-front,.card-back{
+  position:absolute;
+  width:100%;
+  height:100%;
+  backface-visibility:hidden;
+  border-radius:10px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-weight:600;
+}
 .card-front{background:#0b0b0b;border:1px solid rgba(212,175,55,0.05);color:#bfc6c9;}
 .card-back{background:rgba(212,175,55,0.15);transform:rotateY(180deg);color:#111;}
-.badge{position:absolute;top:6px;right:6px;background:rgba(0,0,0,0.4);color:#d4af37;padding:3px 6px;border-radius:6px;font-weight:700;font-size:12px;}
+
+.badge{
+  position:absolute;
+  top:6px;
+  right:6px;
+  background:rgba(0,0,0,0.4);
+  color:#d4af37;
+  padding:3px 6px;
+  border-radius:6px;
+  font-weight:700;
+  font-size:12px;
+}
+
 .result-area{margin-top:16px;}
 .small{font-size:13px;color:#bfc6c9;text-align:center;}
+
+/* Confetti */
 .confetti{
   position:absolute;width:8px;height:8px;background:rgba(212,175,55,0.9);
   pointer-events:none;animation:confetti-fall 1s linear forwards;
@@ -114,6 +197,29 @@ input{
 </style>
 </head>
 <body>
+<!-- Animasi pohon & salju -->
+<script>
+function createTree(){
+  const tree=document.createElement('div');
+  tree.className='tree';
+  tree.style.left=Math.random()*100+'vw';
+  tree.style.top='-50px';
+  tree.style.animationDuration=(5+Math.random()*5)+'s';
+  document.body.appendChild(tree);
+  setTimeout(()=>tree.remove(),10000);
+}
+function createSnow(){
+  const snow=document.createElement('div');
+  snow.className='snowflake';
+  snow.style.left=Math.random()*100+'vw';
+  snow.style.animationDuration=(4+Math.random()*4)+'s';
+  document.body.appendChild(snow);
+  setTimeout(()=>snow.remove(),8000);
+}
+setInterval(createTree,700);
+setInterval(createSnow,150);
+</script>
+
 <div class="wrap">
 <h1>Tebak Kartu Natal</h1>
 <div class="code-row">
@@ -121,11 +227,13 @@ input{
 <button id="verifyBtn" class="btn">Verify</button>
 <div class="small" id="status">Status: belum terkoneksi</div>
 </div>
+
 <div class="prize-list">
   <div class="prize-item">Platinum: 10,000</div>
   <div class="prize-item">Diamond: 25,000</div>
   <div class="prize-item">Super Diamond: 500,000</div>
 </div>
+
 <div id="gridWrap" class="grid"></div>
 <div class="result-area" id="resultArea"></div>
 </div>
